Correction du gap entre les éléments du formulaire de connexion

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -89,11 +89,12 @@ body {
     align-items: center;
     justify-content: start;
     flex: 2;
-    gap: 3rem
+    gap: 0.25rem
 }
 
 .main>h1 {
     padding-top: 3rem;
+    padding-bottom: 2.5rem;
 }
 
 .main>form {
